Add more columns to a5_cols
Add : 'THYROID','B12DEF','ARTHRIT','INCONTU'

--- a/Modelx.ipynb
+++ b/Modelx.ipynb
@@ -70,7 +70,7 @@
     "a1_cols = [\n",
     "    \"NACCAGE\", \"SEX\", \"EDUC\", \"RACE\", \"RACESEC\", \"RACETER\",\n",
     "    \"PRIMLANG\", \"MARISTAT\", \"RESIDENC\", \"NACCLIVS\",\n",
-    "    \"INDEPEND\", \"HANDED\", \"NACCREFR\", \"NACCREAS\"\n",
+    "    \"INDEPEND\", \"HANDED\", \"NACCREFR\", \"NACCREAS\",\n",
     "]\n",
     "\n",
     "# --- A5 Self-reported Health History ---\n",
@@ -83,7 +83,7 @@
     "    \"APNEA\", \"INSOMN\", \"DEP2YRS\", \"PTSD\", \"BIPOLAR\", \"ANXIETY\",\n",
     "    \"TOBAC30\", \"TOBAC100\", \"SMOKYRS\", \"PACKSPER\", \"QUITSMOK\",\n",
     "    \"ALCOCCAS\", \"ALCFREQ\", \"ABUSOTHR\",\n",
-    "    \"NACCBMI\", 'HEIGHT', 'WEIGHT'\n",
+    "    \"NACCBMI\", 'HEIGHT', 'WEIGHT','THYROID','B12DEF','ARTHRIT','INCONTU'\n",
     "]\n",
     "\n",
     "# --- A3 Family History (optional/borderline) ---\n",
@@ -228,7 +228,6 @@
    "source": [
     "print(\"X:\", X.shape)\n",
     "print(\"y:\", y.shape)\n",
-    "\n",
     "\n",
     "df_final\n"
    ]
